--- a/telegram/docker/ws/Dockerfile
+++ b/telegram/docker/ws/Dockerfile
@@ -1,16 +1,5 @@
 FROM python:3-slim as python
 ENV PYTHONUNBUFFERED=true
-ARG API_ID
-ARG API_HASH
-ARG BOT_TOKEN
-ARG BACKUP_KEY
-ARG BACKUP_URL
-
-ENV API_ID=${API_ID}
-ENV API_HASH=${API_HASH}
-ENV BOT_TOKEN=${BOT_TOKEN}
-ENV BACKUP_URL=${BACKUP_URL}
-ENV BACKUP_KEY=${BACKUP_KEY}
 
 ENV POETRY_VERSION=1.2.0
 ENV POETRY_HOME=/opt/poetry
@@ -27,12 +16,9 @@ ENV PATH="${PATH}:${POETRY_VENV}/bin"
 
 WORKDIR /app
 
-COPY pyproject.toml ./
+COPY poetry.lock pyproject.toml ./
 RUN poetry install
 
 COPY . /app
-# RUN echo -e "BOT_TOKEN = $BOT_TOKEN\nAPI_ID = $API_ID\nAPI_HASH = $API_HASH" > ".env"
 
-EXPOSE 8080
-# RUN ["cat",]
 CMD [ "poetry", "run", "python", "run_websocket.py" ]
