--- a/telegram/pyproject.toml
+++ b/telegram/pyproject.toml
@@ -13,6 +13,11 @@ Telethon = "^1.24.0"
 beautifulsoup4 = "^4.11.1"
 lxml = "^4.9.1"
 SQLAlchemy = "^1.4.36"
+aioredis = "^2.0.1"
+ujson = "^5.5.0"
+python-dotenv = "^0.21.0"
+websockets = "^10.4"
+httpx = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 
